--- a/Demo01HTML/Demo02文本标签.html
+++ b/Demo01HTML/Demo02文本标签.html
@@ -32,5 +32,21 @@
 
         <!--水平线-->
         <hr color="black"></hr>
+
+
+        <!--加粗-->
+        酸奶不纯<br>
+        <b>酸奶不纯</b><hr>
+
+       <!-- 斜体-->
+        酸奶不纯<br>
+        <i>酸奶不纯</i><hr>
+
+        <!--字体标签-->
+<font color = "#000000" width = 100% face = "楷体">酸奶不纯</font>
+
+<center>
+    酸奶不纯
+</center>
 </body>
 </html>
