--- a/src/HTML/Demo09案例2.html
+++ b/src/HTML/Demo09案例2.html
@@ -50,7 +50,7 @@
                 <td><label for="checkcode">验证码</label></td>
                 <td>
                     <input type="text" name="checkcode" id="checkcode">
-                    <img src="6.code.png">
+                    <img src="../statics/6.code.png">
                     </td>
             </tr>
 
