--- a/src/Demo-Baidu/Demo.html
+++ b/src/Demo-Baidu/Demo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" charset="UTF-8">
-    <title>Title</title>
+    <title>WebMOOC餐厅</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="asset.css">
     <script src="DemoController.js"></script>
